feat: implement JWT authentication and authorization; add login, signup, logout, and token refresh functionality